--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       <header class="header">
         <img src="./images/logo.png" alt="Around the U.S." class="header__logo">
       </header>
+      <footer class="footer">
+        <p class="footer__copyright">© 2020 Around The U.S.</p>
+      </footer>
     </div>  
   </body>
 </html>
