Add initial .section

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <div class="page">
-      <header class="header">
+      <header class="header section">
         <img src="./images/logo.png" alt="Around the U.S." class="header__logo">
       </header>
-      <footer class="footer">
+      <footer class="footer section section_narrow">
         <p class="footer__copyright">© 2020 Around The U.S.</p>
       </footer>
     </div>  
