--- a/index.html
+++ b/index.html
@@ -12,6 +12,55 @@
       <header class="header section">
         <img src="./images/logo.png" alt="Around the U.S." class="header__logo">
       </header>
+      <main class="content">
+        <section class="elements section">
+          <ul class="elements__container">
+            <li class="element">
+              <img src="./images/yosemiteValley.jpg" alt="A river in Yosemite Valley" class="element__img">
+              <div class="element__description">
+                <h3 class="element__text">Yosemite Valley</h3>
+                <img src="./images/heart.png" alt="Solid black outline of a heart and on a white background" class="element__heart-icon">
+              </div>     
+            </li>
+            <li class="element">
+              <img src="./images/lakeLouise.jpg" alt="Lake Louise bordered by mountains" class="element__img">
+              <div class="element__description">
+                <h3 class="element__text">Lake Louise</h3>
+                <img src="images/heart.png" alt="Solid black outline of a heart and on a white background" class="element__heart-icon">
+              </div>     
+            </li>
+            <li class="element">
+              <img src="./images/baldMountains.jpg" alt="Sunset with a red hue behind mountains" class="element__img">
+              <div class="element__description">
+                <p class="element__text">Bald Mountains</p>
+                <img src="images/heart.png" alt="Solid black outline of a heart and on a white background" class="element__heart-icon">
+              </div>     
+            </li>
+            <li class="element">
+              <img src="./images/latemar.jpg" alt="Mountains and a starry night" class="element__img">
+              <div class="element__description">
+                <h3 class="element__text">Latemar</h3>
+                <img src="images/heart.png" alt="Solid black outline of a heart and on a white background" class="element__heart-icon">
+              </div>     
+            </li>
+            <li class="element">
+              <img src="./images/vanoisNational.jpg" alt="Vanois National Mountains" class="element__img">
+              <div class="element__description">
+                <h3 class="element__text">Vanois National</h3>
+                <img src="images/heart.png" alt="Solid black outline of a heart and on a white background" class="element__heart-icon">
+              </div>     
+            </li>
+            <li class="element">
+              <img src="./images/lagoDiBraies.jpg" alt="Row boat on a placid lake with a snowy mountain backdrop" class="element__img">
+              <div class="element__description">
+                <h3 class="element__text">Lago di Braies</h3>
+                <img src="images/heart.png" alt="Solid black outline of a heart and on a white background" class="element__heart-icon">
+              </div>     
+            </li>
+          </ul>
+        </section>
+
+      </main>
       <footer class="footer section section_narrow">
         <p class="footer__copyright">© 2020 Around The U.S.</p>
       </footer>
