feat: add profile block

--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
             </div>
             <div class="profile__info">
               <h2 class="profile__heading">Jacques Cousteau</h2>
-              <img src="./images/editBtn.png" alt="Pencil icon"> <!--WRONG IMG-->
+              <button type="button" class=" btn btn__edit"><img src="./images/editBtn.png" alt="Pencil icon" class="profile__editIcon"></button>
               <p class="profile__occupation">Explorer</p>
             </div>
-            <button type="button"><img src="./images/addBtn.png" alt="A white addition sign" class="profile__btn"></button>
+            
+            <button type="button" class=" btn btn__add"><img src="./images/addBtn.png" alt="A white addition sign" class=""></button>
           </div>
         </section>
 
