fix: add .section to center content in blocks

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <main class="content">
 
-        <section class="profile">
+        <section class="profile section">
           <div class="profile__container">
             <div class="profile__avatar-container">
               <img src="./images/jacques.jpg" alt="A profile picture of Jacques Cousteau" class="profile__avatar">
@@ -30,7 +30,7 @@
           </div>
         </section>
 
-        <section class="form">
+        <section class="form section">
           <form class="form__admin">
             <div class="form__main-container">
               <h3 class="form__heading"> Edit Profile</h3>
