--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             
             <button type="button" class=" btn btn__add"><img src="./images/addBtn.png" alt="A white addition sign" class=""></button>
-          </div>
+          </div>c
         </section>
 
         <section class="form section">
