--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
             </div>
             <div class="profile__info">
               <h2 class="profile__heading">Jacques Cousteau</h2>
-              <button type="button" class=" btn btn__edit"><img src="./images/editBtn.png" alt="Pencil icon" class="profile__editIcon"></button>
+              <button type="button" class="profile__editBtn"></button>
               <p class="profile__occupation">Explorer</p>
             </div>
             
-            <button type="button" class=" btn btn__add"><img src="./images/addBtn.png" alt="A white addition sign" class=""></button>
-          </div>c
+            <button type="button" class=" btn btn__add">
+              <div src="./images/addBtn.png" alt="Add icon" class="profile_addIcon"></div>
+            </button>
+          </div>
         </section>
 
         <section class="form section">
