fix(style/profile): rm div element

--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
               <button type="button" class="profile__editBtn"></button>
               <p class="profile__occupation">Explorer</p>
             </div>
-            
-            <button type="button" class=" btn btn__add">
-              <div src="./images/addBtn.png" alt="Add icon" class="profile_addIcon"></div>
-            </button>
+            <button type="button" class=" btn btn__add"></button>
           </div>
         </section>
 
