--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <button type="button" class="profile__editBtn"></button>
               <p class="profile__occupation">Explorer</p>
             </div>
-            <button type="button" class=" btn btn__add"></button>
+            <button type="button" class="profile__addBtn"></button>
           </div>
         </section>
 
