fix(bugfix/modal): move block to the bottom of body

--- a/index.html
+++ b/index.html
@@ -29,21 +29,6 @@
           </div>
         </section>
 
-        <section class="form section">
-          <form class="form__admin">
-            <div class="form__main-container">
-              <h3 class="form__heading"> Edit Profile</h3>
-              <fieldset class="form__input-container form__input-container_ctlr_texts">
-                <input type="text" value="Jacques Cousteau" class="input__item input__item_el_name" required> <!--add placeholders-->
-                <input type="text" value="Explorer" class="input__item input__item_el_occupation" required>   
-              </fieldset>
-              <fieldset class="form__handlers">
-                <button type="submit" class="form__btn" value="Save">Save</button>
-              </fieldset>
-            </div>
-          </form>
-        </section>
-
         <section class="elements section">
           <ul class="elements__container">
             <li class="element">
@@ -95,6 +80,21 @@
       <footer class="footer section_narrow">
         <p class="footer__copyright">© 2020 Around The U.S.</p>
       </footer>
-    </div>  
+    </div> 
+    <section class="form section">
+      <form class="form__admin">
+        <div class="form__main-container">
+          <h3 class="form__heading"> Edit Profile</h3>
+          <fieldset class="form__input-container form__input-container_ctlr_texts">
+            <input type="text" value="Jacques Cousteau" class="input__item input__item_el_name" required> <!--add placeholders-->
+            <input type="text" value="Explorer" class="input__item input__item_el_occupation" required>   
+          </fieldset>
+          <fieldset class="form__handlers">
+            <button type="submit" class="form__btn" value="Save">Save</button>
+          </fieldset>
+        </div>
+      </form>
+    </section>
+    <script  src="index.js"></script> 
   </body>
 </html>
