fix(bugfix/modal): change to a div

--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
         <p class="footer__copyright">© 2020 Around The U.S.</p>
       </footer>
     </div> 
-    <section class="form section">
+    
+    <div class="form section">
       <form class="form__admin">
         <div class="form__main-container">
           <h3 class="form__heading"> Edit Profile</h3>
@@ -94,7 +95,7 @@
           </fieldset>
         </div>
       </form>
-    </section>
+    </div>
     <script  src="index.js"></script> 
   </body>
 </html>
