feat(modal): add modal block

--- a/index.html
+++ b/index.html
@@ -81,20 +81,23 @@
         <p class="footer__copyright">© 2020 Around The U.S.</p>
       </footer>
     </div> 
-    
-    <div class="form section">
-      <form class="form__admin">
-        <div class="form__main-container">
-          <h3 class="form__heading"> Edit Profile</h3>
-          <fieldset class="form__input-container form__input-container_ctlr_texts">
-            <input type="text" value="Jacques Cousteau" class="input__item input__item_el_name" required> <!--add placeholders-->
-            <input type="text" value="Explorer" class="input__item input__item_el_occupation" required>   
-          </fieldset>
-          <fieldset class="form__handlers">
-            <button type="submit" class="form__btn" value="Save">Save</button>
-          </fieldset>
-        </div>
-      </form>
+
+    <div class="modal">
+      <div class="modal__content">
+        <button class="modal__closeBtn"></button>
+        <form  action="#" class="form">
+          <div class="form__main-content">
+            <h3 class="modal__heading"> Edit Profile</h3>
+            <fieldset class="form__input-container form__input-container_ctlr_texts">
+              <input type="text" value="Jacques Cousteau" class="form__item form__item_el_name" required> <!--add placeholders-->
+              <input type="text" value="Explorer" class="form__item form__item_el_occupation" required>   
+            </fieldset>
+            <fieldset class="modal__handlers">
+              <button type="submit" class="modal__btn">Save</button>
+            </fieldset>
+         </div>
+        </form>
+      </div>
     </div>
     <script  src="index.js"></script> 
   </body>
