fix: class names

--- a/index.html
+++ b/index.html
@@ -86,19 +86,19 @@
       <div class="modal__content">
         <button class="modal__closeBtn"></button>
         <form  action="#" class="form">
-          <div class="form__main-content">
-            <h3 class="modal__heading"> Edit Profile</h3>
+          <div class="form__content">
+            <h3 class="form__heading"> Edit Profile</h3>
             <fieldset class="form__input-container form__input-container_ctlr_texts">
               <input type="text" value="Jacques Cousteau" class="form__item form__item_el_name" required> <!--add placeholders-->
               <input type="text" value="Explorer" class="form__item form__item_el_occupation" required>   
             </fieldset>
-            <fieldset class="modal__handlers">
-              <button type="submit" class="modal__btn">Save</button>
+            <fieldset class="form__handlers">
+              <button type="submit" class="form__btn">Save</button>
             </fieldset>
          </div>
         </form>
       </div>
     </div>
-    <script  src="index.js"></script> 
+    <script  src="./index.js"></script> 
   </body>
 </html>
