--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </section>
 
       </main>
-      <footer class="footer section_narrow">
+      <footer class="footer section section_narrow">
         <p class="footer__copyright">© 2020 Around The U.S.</p>
       </footer>
     </div> 
