--- a/index.html
+++ b/index.html
@@ -32,42 +32,42 @@
         <section class="elements section">
           <ul class="elements__container">
             <li class="element">
-              <img src="./images/yosemiteValley.jpg" alt="A river in Yosemite Valley" class="element__img">
+              <div style="background-image: url('./images/yosemiteValley.jpg');" class="element__img"></div>
               <div class="element__description">
                 <h3 class="element__text">Yosemite Valley</h3>
                 <button class="element__heart-icon"></button>
               </div>     
             </li>
             <li class="element">
-              <img src="./images/lakeLouise.jpg" alt="Lake Louise bordered by mountains" class="element__img">
+              <div style="background-image: url('./images/lakeLouise.jpg');" class="element__img"></div>
               <div class="element__description">
                 <h3 class="element__text">Lake Louise</h3>
                 <button class="element__heart-icon"></button>
               </div>     
             </li>
             <li class="element">
-              <img src="./images/baldMountains.jpg" alt="Sunset with a red hue behind mountains" class="element__img">
+              <div style="background-image: url('./images/baldMountains.jpg');" class="element__img"></div>
               <div class="element__description">
                 <p class="element__text">Bald Mountains</p>
                 <button class="element__heart-icon"></button>
               </div>     
             </li>
             <li class="element">
-              <img src="./images/latemar.jpg" alt="Mountains and a starry night" class="element__img">
+              <div style="background-image: url('./images/latemar.jpg');" class="element__img"></div>
               <div class="element__description">
                 <h3 class="element__text">Latemar</h3>
                 <button class="element__heart-icon"></button>
               </div>     
             </li>
             <li class="element">
-              <img src="./images/vanoisNational.jpg" alt="Vanois National Mountains" class="element__img">
+              <div style="background-image: url('./images/vanoisNational.jpg');" class="element__img"></div>
               <div class="element__description">
                 <h3 class="element__text">Vanois National</h3>
                 <button class="element__heart-icon"></button>
               </div>     
             </li>
             <li class="element">
-              <img src="./images/lagoDiBraies.jpg" alt="Row boat on a placid lake with a snowy mountain backdrop" class="element__img">
+              <div style="background-image: url('./images/lagoDiBraies.jpg');" class="element__img"></div>
               <div class="element__description">
                 <h3 class="element__text">Lago di Braies</h3>
                 <button class="element__heart-icon"></button>
