fix: add atria-label to optimize accessibility

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             </div>
             <div class="profile__info">
               <h2 class="profile__heading">Jacques Cousteau</h2>
-              <button type="button" class="profile__editBtn"></button>
+              <button aria-label="Edit" type="button" class="profile__editBtn"></button>
               <p class="profile__occupation">Explorer</p>
             </div>
-            <button type="button" class="profile__addBtn"></button>
+            <button aria-label="Add" type="button" class="profile__addBtn"></button>
           </div>
         </section>
 
