--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="page">
       <header class="header section">
-        <img src="./images/logo.png" alt="Around the U.S." class="header__logo">
+        <img src="./images/logo.svg" alt="Around the U.S." class="header__logo">
       </header>
 
       <main class="content">
