fix(hotfix/rm-modifier): only one <fieldset>

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <form  action="#" class="form">
           <div class="form__content">
             <h3 class="form__heading"> Edit Profile</h3>
-            <fieldset class="form__input-container form__input-container_ctlr_texts">
+            <fieldset class="form__input-container">
               <input type="text" value="Jacques Cousteau" class="form__item form__item_el_name" required> <!--add placeholders-->
               <input type="text" value="Explorer" class="form__item form__item_el_occupation" required>   
             </fieldset>
