hotfix: add aria-label to element heart button

--- a/index.html
+++ b/index.html
@@ -34,42 +34,42 @@
               <div style="background-image: url('./images/yosemiteValley.jpg');" class="element__img"></div>
               <div class="element__description">
                 <h3 class="element__text">Yosemite Valley</h3>
-                <button class="element__heart-icon"></button>
+                <button aria-label="Heart" class="element__heart-icon"></button>
               </div>     
             </li>
             <li class="element">
               <div style="background-image: url('./images/lakeLouise.jpg');" class="element__img"></div>
               <div class="element__description">
                 <h3 class="element__text">Lake Louise</h3>
-                <button class="element__heart-icon"></button>
+                <button aria-label="Heart" class="element__heart-icon"></button>
               </div>     
             </li>
             <li class="element">
               <div style="background-image: url('./images/baldMountains.jpg');" class="element__img"></div>
               <div class="element__description">
                 <p class="element__text">Bald Mountains</p>
-                <button class="element__heart-icon"></button>
+                <button aria-label="Heart" class="element__heart-icon"></button>
               </div>     
             </li>
             <li class="element">
               <div style="background-image: url('./images/latemar.jpg');" class="element__img"></div>
               <div class="element__description">
                 <h3 class="element__text">Latemar</h3>
-                <button class="element__heart-icon"></button>
+                <button aria-label="Heart" class="element__heart-icon"></button>
               </div>     
             </li>
             <li class="element">
               <div style="background-image: url('./images/vanoisNational.jpg');" class="element__img"></div>
               <div class="element__description">
                 <h3 class="element__text">Vanois National</h3>
-                <button class="element__heart-icon"></button>
+                <button aria-label="Heart" class="element__heart-icon"></button>
               </div>     
             </li>
             <li class="element">
               <div style="background-image: url('./images/lagoDiBraies.jpg');" class="element__img"></div>
               <div class="element__description">
                 <h3 class="element__text">Lago di Braies</h3>
-                <button class="element__heart-icon"></button>
+                <button aria-label="Heart" class="element__heart-icon"></button>
               </div>     
             </li>
           </ul>
@@ -83,7 +83,7 @@
 
     <div class="modal">
       <div class="modal__content">
-        <button class="modal__closeBtn"></button>
+        <button aria-label="Close" class="modal__closeBtn"></button>
         <form  action="#" class="form">
           <div class="form__content">
             <h3 class="form__heading"> Edit Profile</h3>
