fix: add aria-label to modal button

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
     <div class="modal">
       <div class="modal__content">
-        <button aria-label="Close" class="modal__closeBtn"></button>
+        <button class="modal__closeBtn"></button>
         <form  action="#" class="form">
           <div class="form__content">
             <h3 class="form__heading"> Edit Profile</h3>
