fix: correct heading elements order

--- a/index.html
+++ b/index.html
@@ -33,42 +33,42 @@
             <li class="element">
               <div style="background-image: url('./images/yosemiteValley.jpg');" class="element__img"></div>
               <div class="element__description">
-                <h3 class="element__text">Yosemite Valley</h3>
+                <h2 class="element__text">Yosemite Valley</h2>
                 <button aria-label="Heart" class="element__heart-icon"></button>
               </div>     
             </li>
             <li class="element">
               <div style="background-image: url('./images/lakeLouise.jpg');" class="element__img"></div>
               <div class="element__description">
-                <h3 class="element__text">Lake Louise</h3>
+                <h2 class="element__text">Lake Louise</h2>
                 <button aria-label="Heart" class="element__heart-icon"></button>
               </div>     
             </li>
             <li class="element">
               <div style="background-image: url('./images/baldMountains.jpg');" class="element__img"></div>
               <div class="element__description">
-                <p class="element__text">Bald Mountains</p>
+                <h2 class="element__text">Bald Mountains</h2>
                 <button aria-label="Heart" class="element__heart-icon"></button>
               </div>     
             </li>
             <li class="element">
               <div style="background-image: url('./images/latemar.jpg');" class="element__img"></div>
               <div class="element__description">
-                <h3 class="element__text">Latemar</h3>
+                <h2 class="element__text">Latemar</h2>
                 <button aria-label="Heart" class="element__heart-icon"></button>
               </div>     
             </li>
             <li class="element">
               <div style="background-image: url('./images/vanoisNational.jpg');" class="element__img"></div>
               <div class="element__description">
-                <h3 class="element__text">Vanois National</h3>
+                <h2 class="element__text">Vanois National</h2>
                 <button aria-label="Heart" class="element__heart-icon"></button>
               </div>     
             </li>
             <li class="element">
               <div style="background-image: url('./images/lagoDiBraies.jpg');" class="element__img"></div>
               <div class="element__description">
-                <h3 class="element__text">Lago di Braies</h3>
+                <h2 class="element__text">Lago di Braies</h2>
                 <button aria-label="Heart" class="element__heart-icon"></button>
               </div>     
             </li>
@@ -86,7 +86,7 @@
         <button class="modal__closeBtn"></button>
         <form  action="#" class="form">
           <div class="form__content">
-            <h3 class="form__heading"> Edit Profile</h3>
+            <h3 class="form__heading"> Edit Profile</h2>
             <fieldset class="form__input-container">
               <input type="text" value="Jacques Cousteau" class="form__item form__item_el_name" required> <!--add placeholders-->
               <input type="text" value="Explorer" class="form__item form__item_el_occupation" required>   
