feat: add the li to the template

--- a/index.html
+++ b/index.html
@@ -30,12 +30,7 @@
 
         <section class="elements section">
           <ul class="elements__container">
-            <li class="element">
-              <div style="background-image: url('./images/yosemiteValley.jpg');" class="element__img"></div>
-              <div class="element__description">
-                <h2 class="element__text">Yosemite Valley</h2>
-                <button aria-label="Heart" class="element__heart-icon"></button>
-              </div>     
+            
             </li>
           </ul>
         </section>
@@ -61,6 +56,15 @@
         </form>
       </div>
     </div>
+
+    <template class="element-template">
+      <li class="element">
+        <div style="background-image: url('./images/yosemiteValley.jpg');" class="element__img"></div>
+        <div class="element__description">
+          <h2 class="element__text">Yosemite Valley</h2>
+          <button aria-label="Heart" class="element__heart-icon"></button>
+        </div>     
+    </template>
     <script  src="./index.js"></script> 
   </body>
 </html>
