--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 
     <template class="element-template">
       <li class="element">
-        <div style="background-image: url('./images/yosemiteValley.jpg');" class="element__img"></div>
+        <div class="element__img"></div>
         <div class="element__description">
-          <h2 class="element__text">Yosemite Valley</h2>
+          <h2 class="element__text"></h2>
           <button aria-label="Heart" class="element__heart-icon"></button>
         </div>     
     </template>
