refactor: rename .element to .card

--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
       </div>
     </div>
 
-    <template class="element-template">
-      <li class="element">
-        <div class="element__img"></div>
-        <div class="element__description">
-          <h2 class="element__text"></h2>
-          <button aria-label="Heart" class="element__heart-icon"></button>
+    <template class="card-template">
+      <li class="card">
+        <div class="card__img"></div>
+        <div class="card__description">
+          <h2 class="card__text"></h2>
+          <button aria-label="Heart" class="card__heart-icon"></button>
         </div>  
       </li>   
     </template>
