feat: add a rm button element to the card block

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 
     <template class="card-template">
       <li class="card">
+        <button aria-label="Remove" class="card__removeBtn"></button>
         <div class="card__img"></div>
         <div class="card__description">
           <h2 class="card__text"></h2>
