feat: add character limit to edit input fields

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
           <div class="form__content">
             <h3 class="form__heading">Edit Profile</h3>
             <fieldset class="form__input-container">
-              <input type="text" value="Jacques Cousteau" class="form__item form__item_el_name" required> <!--add placeholders-->
-              <input type="text" value="Explorer" class="form__item form__item_el_occupation" required>   
+              <input type="text" value="Jacques Cousteau" class="form__item form__item_el_name" minlength="2" maxlength="40" required> <!--add placeholders-->
+              <input type="text" value="Explorer" class="form__item form__item_el_occupation" minlength="2" maxlength="200" required>   
             </fieldset>
             <button type="submit" class="form__btn">Save</button>
          </div>
