--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="modal modal_type_editProfile">
       <div class="modal__content">
         <button class="modal__closeBtn"></button>
-        <form  action="#" class="form" name="editProfile" novalidate>
+        <form  action="#" class="form form__type_edit" name="editProfile" novalidate>
           <div class="form__content">
             <h3 class="form__heading">Edit Profile</h3>
             <fieldset class="form__input-container">
@@ -64,7 +64,7 @@
     <div class="modal modal_type_addCard">
       <div class="modal__content">
         <button class="modal__closeBtn"></button>
-        <form  action="#" class="form" novalidate>
+        <form  action="#" class="form form__type_add" novalidate>
           <div class="form__content">
             <h3 class="form__heading">New place</h3>
             <fieldset class="form__input-container">
@@ -111,7 +111,8 @@
         </div>  
       </li>   
     </template>
-    <script src="./validate.js"></script>
-    <script  src="./index.js"></script> 
+    
+  
+    <script type="module" src="./scripts/index.js"></script> 
   </body>
 </html>
