--- a/index.html
+++ b/index.html
@@ -113,6 +113,6 @@
     </template>
     
   
-    <script type="module" src="./scripts/index.js"></script> 
+    <script type="module" src="./pages/index.js"></script> 
   </body>
 </html>
