--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Around the U.S.</title>
     <!--<link rel="stylesheet" href="./pages/index.css">-->
-  </head>
+  <link href="main.css" rel="stylesheet"></head>
   <body>
     <div class="page">
       <header class="header section">
-        <img src="./images/logo.svg" alt="Around the U.S." class="header__logo">
+        <img src="4e8e0a1d604782a0dff8e5b1a5441e4d.svg" alt="Around the U.S." class="header__logo">
       </header>
 
       <main class="content">
@@ -17,7 +17,7 @@
         <section class="profile section">
           <div class="profile__container">
             <div class="profile__avatar-container">
-              <img src="./images/jacques.jpg" alt="A profile picture of Jacques Cousteau" class="profile__avatar">
+              <img src="6163c2039d1f0eb8d7cac65574b1d73a.jpg" alt="A profile picture of Jacques Cousteau" class="profile__avatar">
               <button aria-label="Edit-Avatar" type="button" class="profile__avatar-overlay"></button>
             </div>
             <div class="profile__info">
@@ -144,5 +144,5 @@
     
   
    <!--<script type="module" src="./pages/index.js"></script>--> 
-  </body>
+  <script src="main.js"></script></body>
 </html>
