--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Around the U.S.</title>
+     <link rel="icon" type="image/x-icon"  href="./images/icons8-globe-48.ico">
     <!--<link rel="stylesheet" href="./pages/index.css">-->
   </head>
   <body>
