--- a/index.html
+++ b/index.html
@@ -1,148 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Around the U.S.</title>
-    <!--<link rel="stylesheet" href="./pages/index.css">-->
-  <script defer src="main.js"></script><link href="main.css" rel="stylesheet"></head>
-  <body>
-    <div class="page">
-      <header class="header section">
-        <img src="d7c909d833538e8ca214.svg" alt="Around the U.S." class="header__logo">
-      </header>
-
-      <main class="content">
-
-        <section class="profile section">
-          <div class="profile__container">
-            <div class="profile__avatar-container">
-              <img src="fcfb307083e9cf958fe8.jpg" alt="A profile picture of Jacques Cousteau" class="profile__avatar">
-              <button aria-label="Edit-Avatar" type="button" class="profile__avatar-overlay"></button>
-            </div>
-            <div class="profile__info">
-              <h1 class="profile__heading">Jacques Cousteau</h1>
-              <button aria-label="Edit" type="button" class="profile__editBtn"></button>
-              <p class="profile__occupation">Explorer</p>
-            </div>
-            <button aria-label="Add" type="button" class="profile__addBtn"></button>
-          </div>
-        </section>
-
-        <section class="elements section">
-          <ul class="elements__container">
-          </ul>
-        </section>
-
-      </main>
-      <footer class="footer section section_narrow">
-        <p class="footer__copyright">© 2020 Around The U.S.</p>
-      </footer>
-    </div> 
-
-    <div class="modal modal_type_editProfile">
-      <div class="modal__content">
-        <button class="modal__closeBtn"></button>
-        <form  action="#" class="form form__type_edit" name="editProfile" novalidate>
-          <div class="form__content">
-            <h3 class="form__heading">Edit Profile</h3>
-            <fieldset class="form__input-container">
-              <label class="form__label">
-                <input id="profile-name" type="text" name="name" class="form__item form__item_el_name" placeholder="Name" minlength="2" maxlength="40" required>
-                <span id="profile-name-error" class="form__error"></span>
-              </label>
-              <label class="form__label">
-                <input id="profile-text" type="text" name="title" class="form__item form__item_el_occupation" placeholder="Who are you" minlength="2" maxlength="200" required> 
-                <span id="profile-text-error"class="form__error"></span>
-              </label>
-            </fieldset>
-            <button type="submit" class="form__btn">Save</button>
-         </div>
-        </form>
-      </div>
-    </div>
-
-    <div class="modal modal_type_addCard">
-      <div class="modal__content">
-        <button class="modal__closeBtn"></button>
-        <form  action="#" class="form form__type_add" novalidate>
-          <div class="form__content">
-            <h3 class="form__heading">New place</h3>
-            <fieldset class="form__input-container">
-              <label class="form__label">
-                <input id="card-title" type="text" name="name" class="form__item form__item_el_title" placeholder="Title" minlength="1" maxlength="30" required> 
-                <span id="card-title-error" class="form__error"></span>
-              </label>
-              <label class="form__label">
-                <input id="card-url" type="url" name="link" class="form__item form__item_el_url" placeholder="Image-link" required>
-                <span id="card-url-error" class="form__error"></span>
-              </label>
-            </fieldset>
-            <button type="submit" class="form__btn">Create</button>
-         </div>
-        </form>
-      </div>
-    </div>
-
-    <div class="modal modal_type_imgPopup">
-      <div class="modal__content"> 
-        <button class="modal__closeBtn"></button>
-        <!--
-          Give it fixed positioning, align it to the center of the page, 
-        and make the background for it semi-transparent and black. Code the 
-        semi-transparent background in the separate popup block.    
-       -->
-       <figure class="modal__figure">
-         <img src="#" alt="" class="modal__img">
-         <figcaption class="modal__caption"></figcaption>
-       </figure>
-      </div>
-    </div>
-
-    <div class="modal modal_type_deleteCard">
-      <div class="modal__content">
-        <button class="modal__closeBtn"></button>
-        <form  action="#" class="form form__type_delete" novalidate>
-          <div class="form__content">
-            <h3 class="form__heading">Are you sure?</h3>
-            <button type="submit" class="form__btn">Yes</button>
-         </div>
-        </form>
-      </div>
-    </div>
-  
-    <div class="modal modal_type_setAvatar">
-      <div class="modal__content">
-        <button class="modal__closeBtn"></button>
-        <form  action="#" class="form form__type_delete" novalidate>
-          <div class="form__content">
-            <h3 class="form__heading">Change profile picture</h3>
-            <label class="form__label">
-              <input type="url" name="link" class="form__item form__item_el_url" placeholder="Image-link" required>
-              <span class="form__error"></span>
-            </label>
-            <button type="submit" class="form__btn">Save</button>
-         </div>
-        </form>
-      </div>
-    </div>
-
-    <template class="card-template">
-      <li class="card">
-        <div class="card__img"></div>
-        <button aria-label="Remove" class="card__removeBtn"></button>
-        <div class="card__description">
-          <h2 class="card__text"></h2>
-          <div class="card__likeSection">
-            <button aria-label="Heart" class="card__heart-icon"></button>
-            <h3 class="card__likeCount"></h3>
-          </div>
-          
-        </div>  
-      </li>   
-    </template>
-    
-  
-   <!--<script type="module" src="./pages/index.js"></script>--> 
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Around the U.S.</title><link rel="icon" type="image/x-icon" href="8a4d5e9530af142f698a.ico"><link rel="icon" href="icons8-globe-48.ico"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body><div class="page"><header class="header section"><img src="4e8e0a1d604782a0dff8.svg" alt="Around the U.S." class="header__logo"></header><main class="content"><section class="profile section"><div class="profile__container"><div class="profile__avatar-container"><img src="6163c2039d1f0eb8d7ca.jpg" alt="A profile picture of Jacques Cousteau" class="profile__avatar"> <button aria-label="Edit-Avatar" type="button" class="profile__avatar-overlay"></button></div><div class="profile__info"><h1 class="profile__heading">Jacques Cousteau</h1><button aria-label="Edit" type="button" class="profile__editBtn"></button><p class="profile__occupation">Explorer</p></div><button aria-label="Add" type="button" class="profile__addBtn"></button></div></section><section class="elements section"><ul class="elements__container"></ul></section></main><footer class="footer section section_narrow"><p class="footer__copyright">© 2020 Around The U.S.</p></footer></div><div class="modal modal_type_editProfile"><div class="modal__content"><button class="modal__closeBtn"></button><form action="#" class="form form__type_edit" name="editProfile" novalidate><div class="form__content"><h3 class="form__heading">Edit Profile</h3><fieldset class="form__input-container"><label class="form__label"><input id="profile-name" name="name" class="form__item form__item_el_name" placeholder="Name" minlength="2" maxlength="40" required> <span id="profile-name-error" class="form__error"></span></label> <label class="form__label"><input id="profile-text" name="title" class="form__item form__item_el_occupation" placeholder="Who are you" minlength="2" maxlength="200" required> <span id="profile-text-error" class="form__error"></span></label></fieldset><button type="submit" class="form__btn">Save</button></div></form></div></div><div class="modal modal_type_addCard"><div class="modal__content"><button class="modal__closeBtn"></button><form action="#" class="form form__type_add" novalidate><div class="form__content"><h3 class="form__heading">New place</h3><fieldset class="form__input-container"><label class="form__label"><input id="card-title" name="name" class="form__item form__item_el_title" placeholder="Title" minlength="1" maxlength="30" required> <span id="card-title-error" class="form__error"></span></label> <label class="form__label"><input id="card-url" type="url" name="link" class="form__item form__item_el_url" placeholder="Image-link" required> <span id="card-url-error" class="form__error"></span></label></fieldset><button type="submit" class="form__btn">Create</button></div></form></div></div><div class="modal modal_type_imgPopup"><div class="modal__content"><button class="modal__closeBtn"></button><figure class="modal__figure"><img src="#" alt="" class="modal__img"><figcaption class="modal__caption"></figcaption></figure></div></div><div class="modal modal_type_deleteCard"><div class="modal__content"><button class="modal__closeBtn"></button><form action="#" class="form form__type_delete" novalidate><div class="form__content"><h3 class="form__heading">Are you sure?</h3><button type="submit" class="form__btn">Yes</button></div></form></div></div><div class="modal modal_type_setAvatar"><div class="modal__content"><button class="modal__closeBtn"></button><form action="#" class="form form__type_delete" novalidate><div class="form__content"><h3 class="form__heading">Change profile picture</h3><label class="form__label"><input type="url" name="link" class="form__item form__item_el_url" placeholder="Image-link" required> <span class="form__error"></span></label> <button type="submit" class="form__btn">Save</button></div></form></div></div><template class="card-template"><li class="card"><div class="card__img"></div><button aria-label="Remove" class="card__removeBtn"></button><div class="card__description"><h2 class="card__text"></h2><div class="card__likeSection"><button aria-label="Heart" class="card__heart-icon"></button><h3 class="card__likeCount"></h3></div></div></li></template></body></html>
